--- a/KP/KP.csproj
+++ b/KP/KP.csproj
@@ -52,10 +52,6 @@
             <Generator>MSBuild:Compile</Generator>
             <SubType>Designer</SubType>
         </ApplicationDefinition>
-        <Page Include="MainWindow.xaml">
-            <Generator>MSBuild:Compile</Generator>
-            <SubType>Designer</SubType>
-        </Page>
         <Compile Include="App.xaml.cs">
             <DependentUpon>App.xaml</DependentUpon>
             <SubType>Code</SubType>
@@ -68,9 +64,11 @@
         <Compile Include="Context\key.cs" />
         <Compile Include="Context\prime.cs" />
         <Compile Include="Context\utility.cs" />
-        <Compile Include="MainWindow.xaml.cs">
-            <DependentUpon>MainWindow.xaml</DependentUpon>
-            <SubType>Code</SubType>
+        <Compile Include="Models\ModelAlgorithm.cs" />
+        <Compile Include="ViewModels\ViewModelMain.cs" />
+        <Compile Include="Views\MainWindow.xaml.cs">
+          <DependentUpon>MainWindow.xaml</DependentUpon>
+          <SubType>Code</SubType>
         </Compile>
     </ItemGroup>
     <ItemGroup>
@@ -91,9 +89,20 @@
         <None Include="App.config" />
     </ItemGroup>
     <ItemGroup>
-      <Folder Include="Models" />
-      <Folder Include="ViewModels" />
-      <Folder Include="Views" />
+      <Page Include="Views\MainWindow.xaml">
+        <Generator>MSBuild:Compile</Generator>
+        <SubType>Designer</SubType>
+      </Page>
+    </ItemGroup>
+    <ItemGroup>
+      <ProjectReference Include="..\..\RPKS\RPKS_lab1,2\Soldatov.Wpf.MVVM.Core\Soldatov.Wpf.MVVM.Core.csproj">
+        <Project>{70392552-d528-4b9b-a03e-051c77b22ff6}</Project>
+        <Name>Soldatov.Wpf.MVVM.Core</Name>
+      </ProjectReference>
+      <ProjectReference Include="..\..\RPKS\RPKS_lab1,2\Soldatov.Wpf.MVVM\Soldatov.Wpf.MVVM.csproj">
+        <Project>{79e2ec58-f4a1-468d-aa8c-d8970c7a1431}</Project>
+        <Name>Soldatov.Wpf.MVVM</Name>
+      </ProjectReference>
     </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
