--- a/KP/KP.csproj
+++ b/KP/KP.csproj
@@ -158,6 +158,9 @@
         <Name>KP_Proto</Name>
       </ProjectReference>
     </ItemGroup>
+    <ItemGroup>
+      <Folder Include="file_storage" />
+    </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
     <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
       <PropertyGroup>
