--- a/KP/KP_Server/KP_Server.csproj
+++ b/KP/KP_Server/KP_Server.csproj
@@ -23,7 +23,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="Storage" />
+      <Folder Include="fIle_storage\user_chat" />
     </ItemGroup>
 
 </Project>
